--- a/www/index.html
+++ b/www/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Team Page: [Team Name]</title>
+        <title>Team Page: The PROgrammers</title>
     </head>
     <body>
-        <h1>Team Page: [Team Name]</h1>
+        <h1>Team Page: The PROgrammers</h1>
         <p><strong>Members:</strong></p>
         <ul>
-            <li>Member 1</li>
+            <li>Reece Brutsman</li>
             <li>Ryan Moriarty</li>
             <li>Member 3</li>
             <li>Member 4</li>
