--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li>Reece Brutsman</li>
             <li>Ryan Moriarty</li>
-            <li>Member 3</li>
+            <li>Jasem Jarrar</li>
             <li>Member 4</li>
         </ul>
     </body>
