--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
             <li>Reece Brutsman</li>
             <li>Ryan Moriarty</li>
             <li>Jasem Jarrar</li>
-            <li>Member 4</li>
+            <li>Tyler Swain</li>
         </ul>
     </body>
 </html>
